--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,9 @@
   transition: all 0.3s ease-in-out;
 }
 
+::-webkit-scrollbar{
+  display: none;
+}
 
 
 
@@ -87,4 +90,18 @@
   background-color: rgb(255, 255, 255,0.5);
   border: 0.5px solid white;
   color: blue;
+}
+
+select,::picker(select){
+  appearance: base-select;
+  overflow: hidden;
+  border-radius: 4px;
+}
+::picker(select){
+  background: rgb(21, 20, 20);
+  border: 1px solid rgb(66, 64, 64);
+}
+option:checked{
+  background: rgb(58, 55, 55);
+  color: rgb(25, 25, 185);
 }
